# AimOpenCV

./: CMakeLists.txt  main.cpp
Aim/: Aim.cpp  Aim.hpp
task/: begunok.cpp  cvDirectory.cpp  cvDirectory.h
